--- a/cherish_ehr_app/pubspec.yaml
+++ b/cherish_ehr_app/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   sqflite: ^2.0.0+4
   path_provider: ^2.0.11
   path: ^1.8.2
+  http: ^1.1.0
+  flutter_secure_storage: ^8.0.0
+  flutter_dotenv: ^5.1.0
   flutter_localizations:
     sdk: flutter
 
