Add cherish_ehr_app/.env 1748606820403

--- a/cherish_ehr_app/.env
+++ b/cherish_ehr_app/.env
@@ -1,5 +1,12 @@
-BREVO_API_KEY=your_api_key_here
-SMTP_HOST=smtp-relay.brevo.com
-SMTP_PORT=587
-SMTP_USERNAME=your_smtp_username
-SMTP_PASSWORD=your_smtp_password
+# API Keys
+BREVO_API_KEY=your-brevo-api-key-here
+
+# Email Configuration
+EMAIL_SENDER=no-reply@cherishclinic.com
+SENDER_NAME=Cherish Orthopaedic Centre
+
+# API URLs
+API_URL=https://api.brevo.com/v3
+
+# Database Configuration
+DB_NAME=cherish_ehr.db
