Add sales_management_system/pubspec.yaml 1748721115439

--- a/sales_management_system/pubspec.yaml
+++ b/sales_management_system/pubspec.yaml
@@ -3,24 +3,33 @@ description: A Flutter Android app for Clinic Sales Management System
 publish_to: 'none'
 
 environment:
-  sdk: ">=2.18.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   sqflite: ^2.3.0
   path_provider: ^2.1.1
-  pdf: ^3.10.4
-  printing: ^5.11.0
   shared_preferences: ^2.2.1
   provider: ^6.0.5
   intl: ^0.18.1
-  flutter_barcode_scanner: ^2.0.0
-  permission_handler: ^10.4.3
+  cupertino_icons: ^1.0.6
+  # Removed problematic packages
+  # mobile_scanner
+  # permission_handler
+  # pdf
+  # printing
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
+
+  # Adding fonts section to properly include Material Icons
+  fonts:
+    - family: MaterialIcons
+      fonts:
+        - asset: fonts/MaterialIcons-Regular.ttf
